[project]
name = "lib-name"
version = "0.0.0"
description = ""
authors = [{ name = "jinghaihan" }]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
dependencies = []

[project.urls]
Repository = "https://github.com/jinghaihan/lib-name"
Homepage = "https://github.com/jinghaihan/lib-name#readme"
Bugs = "https://github.com/jinghaihan/lib-name/issues"

[dependency-groups]
typing = ["mypy"]
scripts = ["taskipy"]
lint = ["ruff"]
test = [
  "pytest",
  "pytest-cov",
  "pytest-asyncio",
  "pytest-randomly"
]
docs = []
dev = [
  {include-group = "typing"},
  {include-group = "lint"},
  {include-group = "scripts"},
  {include-group = "test"},
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
pretty = true
show_error_codes = true
enable_error_code = ["ignore-without-code"]
ignore_missing_imports = true
warn_return_any = false

[tool.ruff]
src = ["src", "test"]
line-length = 100
indent-width = 2

[tool.ruff.format]
quote-style = "single"

[tool.taskipy.tasks]
install = "uv sync"
test = "pytest"
lint = "ruff check ."
format = "ruff format . && ruff check . --fix"
typecheck = "mypy src/"
